agregando shornel led

--- a/efecto-Paralax.html
+++ b/efecto-Paralax.html
@@ -19,28 +19,28 @@
         }
 
         .sec1{
-            background: url(img/47421.jpg);
+            background: url(img-byron/atardecer.jpg);
             background-size: cover;
             background-position: center center;
             background-attachment: fixed;
         }
 
         .sec2{
-            background: url(img/jinx-arcane-league-of-legends.jpg);
+            background: url(img-byron/daynerys.jpg);
             background-size: cover;
             background-position: center center;
             background-attachment: fixed;
         }
 
         .sec3{
-            background: url(img/wallhaven-0qjve7.jpg);
+            background: url(img-byron/jinx-arcane-league-of-legends.jpg);
             background-size: cover;
             background-position: center center;
             background-attachment: fixed;
         }
 
         .sec4{
-            background: url(img/wallhaven-m3m57k.jpg);
+            background: url(img-byron/pantalla2.jpg);
             background-size: cover;
             background-position: center center;
             background-attachment: fixed;
