Agregando practicas de transform y transition

--- a/PRIMER-PAGINA-WEB.html
+++ b/PRIMER-PAGINA-WEB.html
@@ -218,7 +218,7 @@
     <footer>
 
         <div class="footer-contenedor-img">
-            <img src="/img-byron/corazon.png" alt="">
+            <img src="img-byron/jinx-arcane-league-of-legends.jpg" alt="">
         </div>
 
     </footer>
